# embeddenator-fs

./: .copilot  CHANGELOG.md  CLI_COMPLETE.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  GAP_ANALYSIS.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V2.md  LICENSE  MERGE_STRATEGY.md  MUTABILITY_PLAN.md  QUICKSTART.md  README.md  ROADMAP.md  STATUS.md
.github/workflows/: ci.yml
benches/: filesystem_benchmarks.rs  incremental_benchmark.rs  ingest_benchmark.rs  query_benchmark.rs
docs/: ARCHITECTURE.md  CORRECTION.md  FUSE.md  STATUS.md
examples/: basic_ingest.rs  batch_processing.rs  correction_overhead_analysis.rs  ebook_modification_test.rs  holographic_accuracy_test.rs  incremental_update.rs  query_files.rs  trained_holographic_test.rs  vsa_encoding_proof.rs
src/: lib.rs
src/disk/: error.rs  filesystem.rs  mod.rs  partition.rs  qcow2.rs  raw.rs
src/fs/: correction.rs  delta.rs  embrfs.rs  fuse_shim.rs  large_file.rs  mod.rs  signal.rs  streaming.rs  versioned_embrfs.rs  versioned_fuse.rs
src/fs/versioned/: chunk.rs  chunk_store.rs  codebook.rs  corrections.rs  engram.rs  journal.rs  manifest.rs  mod.rs  transaction.rs  types.rs
tests/: compression_profiles.rs  concurrent_stress.rs  database_tests.rs  integration_tests.rs  large_file_tests.rs  permissions.rs  scale_tests.rs  special_files.rs  vm_boot_tests.rs  vsa_validation.rs
tests/common/: mod.rs
tests/vm_boot/: aarch64.rs  cache.rs  common.rs  mod.rs  riscv64.rs  x86_64.rs
