[package]
name = "embeddenator-fs"
version = "0.20.0-alpha.3"
edition = "2021"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "EmbrFS: FUSE filesystem backed by holographic engrams"
license = "MIT"
repository = "https://github.com/tzervas/embeddenator-fs"
keywords = ["embeddenator", "fuse", "filesystem", "holographic"]
categories = ["filesystem"]

[features]
default = []
fuse = ["fuser"]

[dependencies]
# FUSE optional feature
fuser = { version = "0.16", optional = true }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
walkdir = "2.3"
arc-swap = "1.6"
rustc-hash = "2.0"
sha2 = "0.10"
# Core embeddenator dependencies
# For development: use git dependencies for finer-grained control
# For release: uncomment crates.io versions and comment out git versions

# Development (git dependencies) - Currently disabled due to version conflicts with retrieval
# Uncomment when all repos are updated to use git deps
# embeddenator-vsa = { git = "https://github.com/tzervas/embeddenator-vsa", branch = "main" }
# embeddenator-retrieval = { git = "https://github.com/tzervas/embeddenator-retrieval", branch = "main" }
# embeddenator-io = { git = "https://github.com/tzervas/embeddenator-io", branch = "main" }  # If needed

# Release (crates.io dependencies)
embeddenator-vsa = { version = "0.20.0-alpha.1" }
embeddenator-retrieval = { version = "0.20.0-alpha.1" }
# embeddenator-io = { version = "0.20.0-alpha.1" }  # If needed

# Note: To use git dependencies in development, use [patch.crates-io] section or ensure
# all dependencies transitively use the same git sources

[dev-dependencies]
proptest = "1.0"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "filesystem_benchmarks"
harness = false
