[package]
name = "embeddenator-fs"
version = "0.22.0"
edition = "2021"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "EmbrFS: FUSE filesystem backed by holographic engrams"
license = "MIT"
repository = "https://github.com/tzervas/embeddenator-fs"
documentation = "https://docs.rs/embeddenator-fs"
keywords = ["embeddenator", "fuse", "filesystem", "holographic"]
categories = ["filesystem"]

[features]
default = []
fuse = ["fuser"]

[dependencies]
# FUSE optional feature
fuser = { version = ">=0.16, <1.0", optional = true }
libc = ">=0.2, <1.0"
serde = { version = ">=1.0, <2.0", features = ["derive"] }
serde_json = ">=1.0, <2.0"
bincode = ">=1.3, <2.0"
walkdir = ">=2.3, <3.0"
arc-swap = ">=1.6, <2.0"
rustc-hash = ">=2.0, <3.0"
sha2 = ">=0.10, <1.0"

# Core embeddenator dependencies (path for dev, semver for publish)
embeddenator-vsa = { path = "../embeddenator-vsa", version = ">=0.20.1, <1.0.0" }
embeddenator-retrieval = { path = "../embeddenator-retrieval", version = ">=0.20.0, <1.0.0" }
embeddenator-io = { path = "../embeddenator-io", version = ">=0.20.0, <1.0.0", features = ["compression-zstd", "compression-lz4"] }

[dependencies.clap]
version = ">=4.5, <5.0"
features = ["derive", "cargo", "wrap_help"]

[[bin]]
name = "embeddenator-fs"
path = "src/bin/embeddenator-fs.rs"

[dev-dependencies]
proptest = ">=1.0, <2.0"
tempfile = ">=3.8, <4.0"
criterion = { version = ">=0.5, <1.0", features = ["html_reports"] }

[[bench]]
name = "filesystem_benchmarks"
harness = false

[[bench]]
name = "ingest_benchmark"
harness = false

[[bench]]
name = "query_benchmark"
harness = false

[[bench]]
name = "incremental_benchmark"
harness = false
