[package]
name = "embeddenator-fs"
version = "0.24.0"
edition = "2021"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "EmbrFS: FUSE filesystem backed by holographic engrams"
license = "MIT"
repository = "https://github.com/tzervas/embeddenator-fs"
documentation = "https://docs.rs/embeddenator-fs"
keywords = ["embeddenator", "fuse", "filesystem", "holographic"]
categories = ["filesystem"]

[features]
default = []
fuse = ["fuser"]
# Parallel encoding for multi-core chunk processing (#45)
parallel = ["rayon"]
# Async streaming support (tokio runtime only, no disk image dependencies)
async-streaming = ["tokio"]
# Disk image support for VM encoding (QCOW2, raw images, partition tables)
# Requires tokio runtime and optional io_uring for maximum performance on Linux
disk-image = ["qcow2-rs", "gpt", "mbrman", "ext4", "positioned-io2", "tokio", "tokio-uring"]
# Disk image support without io_uring (for non-Linux or older kernels)
disk-image-portable = ["qcow2-rs", "gpt", "mbrman", "ext4", "positioned-io2", "tokio"]

[dependencies]
# FUSE optional feature
fuser = { version = ">=0.16, <1.0", optional = true }
libc = ">=0.2, <1.0"
serde = { version = ">=1.0, <2.0", features = ["derive"] }
serde_json = ">=1.0, <2.0"
bincode = ">=1.3, <2.0"
walkdir = ">=2.3, <3.0"
arc-swap = ">=1.6, <2.0"
rustc-hash = ">=2.0, <3.0"
sha2 = ">=0.10, <1.0"

# Disk image support (optional)
# qcow2-rs: QCOW2 virtual disk format used by QEMU/KVM
#   - Why: Enables direct encoding of VM disk images without mounting
#   - Supports backing files, compression, and snapshots
#   - Async I/O via tokio-uring for maximum throughput
qcow2-rs = { version = "0.1", optional = true }

# gpt: GUID Partition Table parsing and manipulation
#   - Why: Modern partition scheme used by UEFI systems and large disks
#   - Pure Rust implementation, no C dependencies
gpt = { version = "4.1", optional = true }

# mbrman: Master Boot Record partition table handling
#   - Why: Legacy partition scheme still common in VMs and embedded systems
#   - Supports logical volumes and Extended Boot Records (EBR)
mbrman = { version = "0.6", optional = true }

# ext4: Read-only ext4 filesystem traversal
#   - Why: Most common Linux filesystem; needed to traverse VM disk contents
#   - Read-only is sufficient for encoding (we don't modify source images)
ext4 = { version = "0.9", optional = true }

# positioned-io2: Positioned I/O traits for the ext4 crate
#   - Why: ext4 crate requires ReadAt trait for random access to disk images
#   - Re-exported from ext4, but needed explicitly for PartitionReader impl
positioned-io2 = { version = "0.3", optional = true }

# Async runtime (required for disk-image features)
# tokio: Industry-standard async runtime for Rust
#   - Why: Required by qcow2-rs, provides consistent async API across the crate
tokio = { version = "1.0", features = ["rt-multi-thread", "fs", "io-util", "sync"], optional = true }

# tokio-uring: io_uring backend for tokio on Linux
#   - Why: 2-3x faster I/O for large disk operations via kernel ring buffer
#   - Falls back gracefully on non-Linux or older kernels
tokio-uring = { version = "0.5", optional = true }

# Signal handling for graceful FUSE unmount
# signal-hook: Cross-platform signal handling library
#   - Why: Required for SIGINT/SIGTERM handling during FUSE mount
#   - Enables graceful shutdown with WAL flush and clean unmount
signal-hook = "0.3"

# Parallel processing (optional)
# rayon: Data parallelism library for multi-core chunk encoding
#   - Why: Chunks are independent, can encode in parallel for >4x speedup
#   - Thread pool auto-sizes to available CPU cores
rayon = { version = ">=1.8, <2.0", optional = true }

# Core embeddenator dependencies (path for dev, semver for publish)
# Note: Version constraints relaxed for CI compatibility with GitHub remotes
embeddenator-vsa = { path = "../embeddenator-vsa", version = ">=0.20.0, <1.0.0" }
embeddenator-retrieval = { path = "../embeddenator-retrieval", version = ">=0.20.0, <1.0.0" }
embeddenator-io = { path = "../embeddenator-io", version = ">=0.20.0, <1.0.0", features = ["compression-zstd", "compression-lz4"] }

[dependencies.clap]
version = ">=4.5, <5.0"
features = ["derive", "cargo", "wrap_help"]

[[bin]]
name = "embeddenator-fs"
path = "src/bin/embeddenator-fs.rs"

[dev-dependencies]
proptest = ">=1.0, <2.0"
tempfile = ">=3.8, <4.0"
criterion = { version = ">=0.5, <1.0", features = ["html_reports"] }
dirs = "5.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[[bench]]
name = "filesystem_benchmarks"
harness = false

[[bench]]
name = "ingest_benchmark"
harness = false

[[bench]]
name = "query_benchmark"
harness = false

[[bench]]
name = "incremental_benchmark"
harness = false
